--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2
       env:
         # ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PERSONAL_TOKEN: PERSONAL_TOKEN_GITHUB_REPO
+        PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN_GITHUB_REPO }}
         EXTERNAL_REPOSITORY: vunb/vunb.github.io
         PUBLISH_BRANCH: master
         PUBLISH_DIR: ./public
